Added Html code

--- a/index.html
+++ b/index.html
@@ -6,6 +6,25 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Repo Check</h1>
+    <div>
+       <form>
+            <fieldset>
+                <h1>LOGIN</h1>
+                <h5>Welcome back! Please login to your account</h5>
+
+                <p>User Name</p>
+                <input type="text" placeholder="Username" required>
+
+                <p>Password</p>
+                <input type="password" placeholder="Password" minlength="8" maxlength="12" required>
+
+                <input type="radio">
+                <p>Forgot Password</p>
+                <input type="button" Value="Login">
+                <p>New User? Signup</p>
+            </fieldset>
+        </form>
+    </div>
+
 </body>
 </html>
