--- a/index.html
+++ b/index.html
@@ -3,25 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Assignment 03 HTML CSS</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div>
+    <div id="form">
        <form>
             <fieldset>
-                <h1>LOGIN</h1>
-                <h5>Welcome back! Please login to your account</h5>
+                <img src="./welcome_Back_Image.png" alt="Ye image hai" id="img">
+                <div id="login">
+                    <h1>LOGIN</h1>
+                    <h5>Welcome back! Please login to your account</h5>
 
-                <p>User Name</p>
-                <input type="text" placeholder="Username" required>
+                    <p>User Name</p>
+                    <input type="text" placeholder="Username" required>
 
-                <p>Password</p>
-                <input type="password" placeholder="Password" minlength="8" maxlength="12" required>
-
-                <input type="radio">
-                <p>Forgot Password</p>
-                <input type="button" Value="Login">
-                <p>New User? Signup</p>
+                    <p>Password</p>
+                    <input type="password" placeholder="Password" minlength="8" maxlength="12" required>
+    <br>
+                    <input type="radio" > Remember Me
+                    <p>Forgot Password</p>
+                    <input type="button" Value="Login">
+                    <p>New User? Signup</p>
+                </div>    
             </fieldset>
         </form>
     </div>
