change in Login button

--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
                     <h1>LOGIN</h1>
                     <h5>Welcome back! Please login to your account</h5>
 
-                    <p>User Name</p>
-                    <input type="text" placeholder="Username" required>
+                    <p class="placeholder">User Name</p>
+                    <input type="text" placeholder="Username" required class="Username">
 
-                    <p>Password</p>
-                    <input type="password" placeholder="Password" minlength="8" maxlength="12" required>
+                    <p class="placeholder">Password</p>
+                    <input type="password" placeholder="Password" minlength="8" maxlength="12" required class="usernsme">
     <br>
                     <input type="radio" > Remember Me
                     <p>Forgot Password</p>
-                    <input type="button" Value="Login">
-                    <p>New User? Signup</p>
+                    
+                    <button>LOGIN</button><p>New User? Signup</p>
                 </div>    
             </fieldset>
         </form>
