add some css changes and a link in Html

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                     <p class="placeholder">Password</p>
                     <input type="password" placeholder="Password" minlength="8" maxlength="12" required class="usernsme">
     <br>
-                    <input type="radio" > Remember Me
-                    <p>Forgot Password</p>
-                    
+                    <input type="radio" ><p id="remember">Remember Me</p>
+                    <!-- <p id="Forgot">Forgot Password</p> -->
+                    <a href="link">Forgot Password</a>
                     <button>LOGIN</button><p>New User? Signup</p>
                 </div>    
             </fieldset>
