--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
                     <p class="placeholder">Password</p>
                     <input type="password" placeholder="Password" minlength="8" maxlength="12" required class="usernsme">
     <br>
-                    <input type="radio" ><p id="remember">Remember Me</p>
+                    <input type="radio" id="radio"><p id="remember">Remember Me</p>
                     <!-- <p id="Forgot">Forgot Password</p> -->
-                    <a href="link">Forgot Password</a>
-                    <button>LOGIN</button><p>New User? Signup</p>
+                    <a href="" id="forgot">Forgot Password</a>
+                    <br>
+                    <button>LOGIN</button>
+                    <p id="user">New User? <a href="">Signup</a></p>
                 </div>    
             </fieldset>
         </form>
