everything is fixed just coloring is to be added

--- a/index.html
+++ b/index.html
@@ -21,10 +21,8 @@
                     <p class="placeholder">Password</p>
                     <input type="password" placeholder="Password" minlength="8" maxlength="12" required class="usernsme">
     <br>
-                    <input type="radio" id="radio"><p id="remember">Remember Me</p>
-                    <!-- <p id="Forgot">Forgot Password</p> -->
-                    <a href="" id="forgot">Forgot Password</a>
-                    <br>
+                    <input type="radio" id="radio"><p id="remember">Remember Me <a href="" id="forgot">Forgot Password</a></p>
+                    
                     <button>LOGIN</button>
                     <p id="user">New User? <a href="">Signup</a></p>
                 </div>    
