--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
                     <h5>Welcome back! Please login to your account</h5>
 
                     <p class="placeholder">User Name</p>
-                    <input type="text" placeholder="Username" required class="Username">
+                    <input type="text" placeholder="Username" required class="username">
 
                     <p class="placeholder">Password</p>
-                    <input type="password" placeholder="Password" minlength="8" maxlength="12" required class="usernsme">
+                    <input type="password" placeholder="Password" minlength="8" maxlength="12" required class="username">
     <br>
                     <input type="radio" id="radio"><p id="remember">Remember Me <a href="" id="forgot">Forgot Password</a></p>
                     
