add minimal changes

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
                     <h1>LOGIN</h1>
                     <h5>Welcome back! Please login to your account</h5>
 
-                    <p class="placeholder">User Name</p>
+                    <p class="placeholder"><b>User Name</b></p>
                     <input type="text" placeholder="Username" required class="username">
 
-                    <p class="placeholder">Password</p>
+                    <p class="placeholder"><b>Password</b></p>
                     <input type="password" placeholder="Password" minlength="8" maxlength="12" required class="username">
     <br>
                     <input type="radio" id="radio"><p id="remember">Remember Me <a href="" id="forgot">Forgot Password</a></p>
